tests/compile_fail/unsupported_abi_change.c
#define MRES_USE_BOOL_FIELDS 1
#include "mres.h"

int main(void)
{
    return 0;
}
